// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fourth person picks a card 1`] = `
Object {
  "db": Object {
    "games": Object {
      "0-05526803409810505": Object {
        "id": "0-05526803409810505",
        "notified_players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "rounds": Object {
          "0": "0-05526803409810505",
        },
      },
    },
    "hands": Object {
      "0-05526803409810505": Object {
        "123456": Object {
          "cards": Object {
            "1015": true,
            "1039": true,
            "1040": true,
            "310": true,
            "444": true,
            "597": true,
            "640": true,
            "714": true,
            "748": true,
          },
          "game": "0-05526803409810505",
          "player": 123456,
        },
        "234567": Object {
          "cards": Object {
            "218": true,
            "370": true,
            "429": true,
            "485": true,
            "624": true,
            "629": true,
            "725": true,
            "779": true,
            "951": true,
          },
          "game": "0-05526803409810505",
          "player": 234567,
        },
        "345678": Object {
          "cards": Object {
            "252": true,
            "322": true,
            "458": true,
            "582": true,
            "590": true,
            "609": true,
            "900": true,
            "965": true,
            "999": true,
          },
          "game": "0-05526803409810505",
          "player": 345678,
        },
        "456789": Object {
          "cards": Object {
            "241": true,
            "244": true,
            "334": true,
            "470": true,
            "498": true,
            "524": true,
            "593": true,
            "855": true,
            "898": true,
          },
          "game": "0-05526803409810505",
          "player": 456789,
        },
        "567890": Object {
          "cards": Object {
            "125": true,
            "227": true,
            "31": true,
            "32": true,
            "36": true,
            "530": true,
            "597": true,
            "604": true,
            "605": true,
            "729": true,
          },
          "game": "0-05526803409810505",
          "player": 567890,
        },
      },
    },
    "players": Object {
      "facebook": Object {
        "123456": Object {
          "first_name": "Ray",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 123456,
          "platform": "facebook",
        },
        "234567": Object {
          "first_name": "Hermon",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 234567,
          "platform": "facebook",
        },
        "345678": Object {
          "first_name": "Hermes",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 345678,
          "platform": "facebook",
        },
        "456789": Object {
          "first_name": "Hermshire",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 456789,
          "platform": "facebook",
        },
        "567890": Object {
          "first_name": "Hermda",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 567890,
          "platform": "facebook",
        },
      },
    },
    "queue": Object {},
    "rounds": Object {
      "0-05526803409810505": Object {
        "0-05526803409810505": Object {
          "candidates": Object {
            "123456": 268,
            "234567": 188,
            "345678": 175,
            "456789": 117,
          },
          "card": Object {
            "contents": "I can only express myself through _.",
            "id": 189,
          },
          "game": "0-05526803409810505",
          "id": "0-05526803409810505",
        },
      },
    },
  },
  "results": Object {
    "action": "pick",
    "candidates": Object {
      "123456": Object {
        "contents": "Dropping a chandelier on your enemies and riding the rope up.",
        "id": 268,
      },
      "234567": Object {
        "contents": "Keg stands.",
        "id": 188,
      },
      "345678": Object {
        "contents": "Skeletor.",
        "id": 175,
      },
    },
    "game": Object {
      "id": "0-05526803409810505",
      "notified_players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "rounds": Object {
        "0": "0-05526803409810505",
      },
    },
    "hand": Object {
      "cards": Array [
        Object {
          "contents": "Sniffing glue.",
          "id": 117,
        },
        Object {
          "contents": "Tweeting.",
          "id": 241,
        },
        Object {
          "contents": "New Age music.",
          "id": 244,
        },
        Object {
          "contents": "A snapping turtle biting the tip of your penis.",
          "id": 334,
        },
        Object {
          "contents": "Apologizing.",
          "id": 470,
        },
        Object {
          "contents": "Jafar.",
          "id": 498,
        },
        Object {
          "contents": "Statistically validated stereotypes.",
          "id": 524,
        },
        Object {
          "contents": "A sweet spaceship.",
          "id": 593,
        },
        Object {
          "contents": "Going viral on YouTube.",
          "id": 855,
        },
        Object {
          "contents": "Slow seductive tentacle rape.",
          "id": 898,
        },
      ],
      "game": "0-05526803409810505",
      "player": 456789,
    },
    "lead": Object {
      "id": 456789,
      "platform": "facebook",
    },
    "messages": Array [
      Object {
        "payload": Object {
          "card": Object {
            "contents": "Sniffing glue.",
            "id": 117,
          },
        },
        "type": "card-selected-message",
      },
      Object {
        "type": "wait-for-votes-message",
      },
    ],
    "payload": Object {
      "game": "0-05526803409810505",
      "pick": 117,
      "round": "0-05526803409810505",
    },
    "pick": Object {
      "contents": "Sniffing glue.",
      "id": 117,
    },
    "player": Object {
      "first_name": "Hermshire",
      "games": Object {
        "0-05526803409810505": true,
      },
      "id": 456789,
      "platform": "facebook",
    },
    "round": Object {
      "candidates": Object {
        "123456": 268,
        "234567": 188,
        "345678": 175,
      },
      "card": Object {
        "contents": "I can only express myself through _.",
        "id": 189,
      },
      "game": "0-05526803409810505",
      "id": "0-05526803409810505",
    },
  },
}
`;

exports[`pick a card for the goal 1`] = `
Object {
  "db": Object {
    "games": Object {
      "0-05526803409810505": Object {
        "id": "0-05526803409810505",
        "notified_players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "rounds": Object {
          "0": "0-05526803409810505",
        },
      },
    },
    "hands": Object {
      "0-05526803409810505": Object {
        "123456": Object {
          "cards": Object {
            "1015": true,
            "1039": true,
            "1040": true,
            "310": true,
            "444": true,
            "597": true,
            "640": true,
            "714": true,
            "748": true,
          },
          "game": "0-05526803409810505",
          "player": 123456,
        },
        "234567": Object {
          "cards": Object {
            "188": true,
            "218": true,
            "370": true,
            "429": true,
            "485": true,
            "624": true,
            "629": true,
            "725": true,
            "779": true,
            "951": true,
          },
          "game": "0-05526803409810505",
          "player": 234567,
        },
        "345678": Object {
          "cards": Object {
            "175": true,
            "252": true,
            "322": true,
            "458": true,
            "582": true,
            "590": true,
            "609": true,
            "900": true,
            "965": true,
            "999": true,
          },
          "game": "0-05526803409810505",
          "player": 345678,
        },
        "456789": Object {
          "cards": Object {
            "117": true,
            "241": true,
            "244": true,
            "334": true,
            "470": true,
            "498": true,
            "524": true,
            "593": true,
            "855": true,
            "898": true,
          },
          "game": "0-05526803409810505",
          "player": 456789,
        },
        "567890": Object {
          "cards": Object {
            "125": true,
            "227": true,
            "31": true,
            "32": true,
            "36": true,
            "530": true,
            "597": true,
            "604": true,
            "605": true,
            "729": true,
          },
          "game": "0-05526803409810505",
          "player": 567890,
        },
      },
    },
    "players": Object {
      "facebook": Object {
        "123456": Object {
          "first_name": "Ray",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 123456,
          "platform": "facebook",
        },
        "234567": Object {
          "first_name": "Hermon",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 234567,
          "platform": "facebook",
        },
        "345678": Object {
          "first_name": "Hermes",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 345678,
          "platform": "facebook",
        },
        "456789": Object {
          "first_name": "Hermshire",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 456789,
          "platform": "facebook",
        },
        "567890": Object {
          "first_name": "Hermda",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 567890,
          "platform": "facebook",
        },
      },
    },
    "queue": Object {},
    "rounds": Object {
      "0-05526803409810505": Object {
        "0-05526803409810505": Object {
          "candidates": Object {
            "123456": 268,
          },
          "card": Object {
            "contents": "I can only express myself through _.",
            "id": 189,
          },
          "game": "0-05526803409810505",
          "id": "0-05526803409810505",
        },
      },
    },
  },
  "results": Object {
    "action": "pick",
    "candidates": Object {},
    "game": Object {
      "id": "0-05526803409810505",
      "notified_players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "rounds": Object {
        "0": "0-05526803409810505",
      },
    },
    "hand": Object {
      "cards": Array [
        Object {
          "contents": "Dropping a chandelier on your enemies and riding the rope up.",
          "id": 268,
        },
        Object {
          "contents": "Gloryholes.",
          "id": 310,
        },
        Object {
          "contents": "A robust mongoloid.",
          "id": 444,
        },
        Object {
          "contents": "Boris the Soviet Love Hammer.",
          "id": 597,
        },
        Object {
          "contents": "Owlbear's tears.",
          "id": 640,
        },
        Object {
          "contents": "Asians being racist against each other.",
          "id": 714,
        },
        Object {
          "contents": "Having sex in the P.E. equipment shed.",
          "id": 748,
        },
        Object {
          "contents": "Hand-me-down adult diapers",
          "id": 1015,
        },
        Object {
          "contents": "Vomiting in the shower",
          "id": 1039,
        },
        Object {
          "contents": "An intellectually superior overlord",
          "id": 1040,
        },
      ],
      "game": "0-05526803409810505",
      "player": 123456,
    },
    "lead": Object {
      "id": 123456,
      "platform": "facebook",
    },
    "messages": Array [
      Object {
        "payload": Object {
          "card": Object {
            "contents": "Dropping a chandelier on your enemies and riding the rope up.",
            "id": 268,
          },
        },
        "type": "card-selected-message",
      },
      Object {
        "type": "wait-for-votes-message",
      },
    ],
    "payload": Object {
      "game": "0-05526803409810505",
      "pick": 268,
      "round": "0-05526803409810505",
    },
    "pick": Object {
      "contents": "Dropping a chandelier on your enemies and riding the rope up.",
      "id": 268,
    },
    "player": Object {
      "first_name": "Ray",
      "games": Object {
        "0-05526803409810505": true,
      },
      "id": 123456,
      "platform": "facebook",
    },
    "round": Object {
      "card": Object {
        "contents": "I can only express myself through _.",
        "id": 189,
      },
      "game": "0-05526803409810505",
      "id": "0-05526803409810505",
    },
  },
}
`;

exports[`second person picks a card 1`] = `
Object {
  "db": Object {
    "games": Object {
      "0-05526803409810505": Object {
        "id": "0-05526803409810505",
        "notified_players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "rounds": Object {
          "0": "0-05526803409810505",
        },
      },
    },
    "hands": Object {
      "0-05526803409810505": Object {
        "123456": Object {
          "cards": Object {
            "1015": true,
            "1039": true,
            "1040": true,
            "310": true,
            "444": true,
            "597": true,
            "640": true,
            "714": true,
            "748": true,
          },
          "game": "0-05526803409810505",
          "player": 123456,
        },
        "234567": Object {
          "cards": Object {
            "218": true,
            "370": true,
            "429": true,
            "485": true,
            "624": true,
            "629": true,
            "725": true,
            "779": true,
            "951": true,
          },
          "game": "0-05526803409810505",
          "player": 234567,
        },
        "345678": Object {
          "cards": Object {
            "175": true,
            "252": true,
            "322": true,
            "458": true,
            "582": true,
            "590": true,
            "609": true,
            "900": true,
            "965": true,
            "999": true,
          },
          "game": "0-05526803409810505",
          "player": 345678,
        },
        "456789": Object {
          "cards": Object {
            "117": true,
            "241": true,
            "244": true,
            "334": true,
            "470": true,
            "498": true,
            "524": true,
            "593": true,
            "855": true,
            "898": true,
          },
          "game": "0-05526803409810505",
          "player": 456789,
        },
        "567890": Object {
          "cards": Object {
            "125": true,
            "227": true,
            "31": true,
            "32": true,
            "36": true,
            "530": true,
            "597": true,
            "604": true,
            "605": true,
            "729": true,
          },
          "game": "0-05526803409810505",
          "player": 567890,
        },
      },
    },
    "players": Object {
      "facebook": Object {
        "123456": Object {
          "first_name": "Ray",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 123456,
          "platform": "facebook",
        },
        "234567": Object {
          "first_name": "Hermon",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 234567,
          "platform": "facebook",
        },
        "345678": Object {
          "first_name": "Hermes",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 345678,
          "platform": "facebook",
        },
        "456789": Object {
          "first_name": "Hermshire",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 456789,
          "platform": "facebook",
        },
        "567890": Object {
          "first_name": "Hermda",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 567890,
          "platform": "facebook",
        },
      },
    },
    "queue": Object {},
    "rounds": Object {
      "0-05526803409810505": Object {
        "0-05526803409810505": Object {
          "candidates": Object {
            "123456": 268,
            "234567": 188,
          },
          "card": Object {
            "contents": "I can only express myself through _.",
            "id": 189,
          },
          "game": "0-05526803409810505",
          "id": "0-05526803409810505",
        },
      },
    },
  },
  "results": Object {
    "action": "pick",
    "candidates": Object {
      "123456": Object {
        "contents": "Dropping a chandelier on your enemies and riding the rope up.",
        "id": 268,
      },
    },
    "game": Object {
      "id": "0-05526803409810505",
      "notified_players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "rounds": Object {
        "0": "0-05526803409810505",
      },
    },
    "hand": Object {
      "cards": Array [
        Object {
          "contents": "Keg stands.",
          "id": 188,
        },
        Object {
          "contents": "Balls.",
          "id": 218,
        },
        Object {
          "contents": "Women in yogurt commercials.",
          "id": 370,
        },
        Object {
          "contents": "Eating the last known bison.",
          "id": 429,
        },
        Object {
          "contents": "Enormous Scandinavian women.",
          "id": 485,
        },
        Object {
          "contents": "Gamer chicks.",
          "id": 624,
        },
        Object {
          "contents": "Misogynerds.",
          "id": 629,
        },
        Object {
          "contents": "4chan.",
          "id": 725,
        },
        Object {
          "contents": "Taking a dump in Char's helmet.",
          "id": 779,
        },
        Object {
          "contents": "Warm, velvety muppet sex.",
          "id": 951,
        },
      ],
      "game": "0-05526803409810505",
      "player": 234567,
    },
    "lead": Object {
      "id": 234567,
      "platform": "facebook",
    },
    "messages": Array [
      Object {
        "payload": Object {
          "card": Object {
            "contents": "Keg stands.",
            "id": 188,
          },
        },
        "type": "card-selected-message",
      },
      Object {
        "type": "wait-for-votes-message",
      },
    ],
    "payload": Object {
      "game": "0-05526803409810505",
      "pick": 188,
      "round": "0-05526803409810505",
    },
    "pick": Object {
      "contents": "Keg stands.",
      "id": 188,
    },
    "player": Object {
      "first_name": "Hermon",
      "games": Object {
        "0-05526803409810505": true,
      },
      "id": 234567,
      "platform": "facebook",
    },
    "round": Object {
      "candidates": Object {
        "123456": 268,
      },
      "card": Object {
        "contents": "I can only express myself through _.",
        "id": 189,
      },
      "game": "0-05526803409810505",
      "id": "0-05526803409810505",
    },
  },
}
`;

exports[`the last player to pick a card 1`] = `
Object {
  "db": Object {
    "candidates": Object {
      "0-05526803409810505": Object {
        "0-05526803409810505": Object {
          "candidates": Object {
            "123456": 268,
            "234567": 188,
            "345678": 175,
            "456789": 117,
            "567890": 31,
          },
          "game": "0-05526803409810505",
          "notified_players": Object {
            "567890": true,
          },
          "round": "0-05526803409810505",
        },
      },
    },
    "games": Object {
      "0-05526803409810505": Object {
        "id": "0-05526803409810505",
        "notified_players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "rounds": Object {
          "0": "0-05526803409810505",
        },
      },
    },
    "hands": Object {
      "0-05526803409810505": Object {
        "123456": Object {
          "cards": Object {
            "1015": true,
            "1039": true,
            "1040": true,
            "310": true,
            "444": true,
            "597": true,
            "640": true,
            "714": true,
            "748": true,
          },
          "game": "0-05526803409810505",
          "player": 123456,
        },
        "234567": Object {
          "cards": Object {
            "218": true,
            "370": true,
            "429": true,
            "485": true,
            "624": true,
            "629": true,
            "725": true,
            "779": true,
            "951": true,
          },
          "game": "0-05526803409810505",
          "player": 234567,
        },
        "345678": Object {
          "cards": Object {
            "252": true,
            "322": true,
            "458": true,
            "582": true,
            "590": true,
            "609": true,
            "900": true,
            "965": true,
            "999": true,
          },
          "game": "0-05526803409810505",
          "player": 345678,
        },
        "456789": Object {
          "cards": Object {
            "241": true,
            "244": true,
            "334": true,
            "470": true,
            "498": true,
            "524": true,
            "593": true,
            "855": true,
            "898": true,
          },
          "game": "0-05526803409810505",
          "player": 456789,
        },
        "567890": Object {
          "cards": Object {
            "125": true,
            "227": true,
            "32": true,
            "36": true,
            "530": true,
            "597": true,
            "604": true,
            "605": true,
            "729": true,
          },
          "game": "0-05526803409810505",
          "player": 567890,
        },
      },
    },
    "players": Object {
      "facebook": Object {
        "123456": Object {
          "first_name": "Ray",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 123456,
          "platform": "facebook",
        },
        "234567": Object {
          "first_name": "Hermon",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 234567,
          "platform": "facebook",
        },
        "345678": Object {
          "first_name": "Hermes",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 345678,
          "platform": "facebook",
        },
        "456789": Object {
          "first_name": "Hermshire",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 456789,
          "platform": "facebook",
        },
        "567890": Object {
          "first_name": "Hermda",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 567890,
          "platform": "facebook",
        },
      },
    },
    "queue": Object {},
    "rounds": Object {
      "0-05526803409810505": Object {
        "0-05526803409810505": Object {
          "candidates": Object {
            "123456": 268,
            "234567": 188,
            "345678": 175,
            "456789": 117,
            "567890": 31,
          },
          "card": Object {
            "contents": "I can only express myself through _.",
            "id": 189,
          },
          "game": "0-05526803409810505",
          "id": "0-05526803409810505",
        },
      },
    },
  },
  "results": Object {
    "action": "pick",
    "candidates": Object {
      "123456": Object {
        "contents": "Dropping a chandelier on your enemies and riding the rope up.",
        "id": 268,
      },
      "234567": Object {
        "contents": "Keg stands.",
        "id": 188,
      },
      "345678": Object {
        "contents": "Skeletor.",
        "id": 175,
      },
      "456789": Object {
        "contents": "Sniffing glue.",
        "id": 117,
      },
    },
    "game": Object {
      "id": "0-05526803409810505",
      "notified_players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "rounds": Object {
        "0": "0-05526803409810505",
      },
    },
    "hand": Object {
      "cards": Array [
        Object {
          "contents": "The forbidden fruit.",
          "id": 31,
        },
        Object {
          "contents": "Republicans.",
          "id": 32,
        },
        Object {
          "contents": "Men.",
          "id": 36,
        },
        Object {
          "contents": "The heart of a child.",
          "id": 125,
        },
        Object {
          "contents": "The Rev. Dr. Martin Luther King, Jr.",
          "id": 227,
        },
        Object {
          "contents": "The harsh light of day.",
          "id": 530,
        },
        Object {
          "contents": "Boris the Soviet Love Hammer.",
          "id": 597,
        },
        Object {
          "contents": "My first kill.",
          "id": 604,
        },
        Object {
          "contents": "Graphic violence, adult language, and some sexual content.",
          "id": 605,
        },
        Object {
          "contents": "Hatsune Miku's screams.",
          "id": 729,
        },
      ],
      "game": "0-05526803409810505",
      "player": 567890,
    },
    "lead": Object {
      "id": 567890,
      "platform": "facebook",
    },
    "messages": Array [
      Object {
        "payload": Object {
          "card": Object {
            "contents": "The forbidden fruit.",
            "id": 31,
          },
        },
        "type": "card-selected-message",
      },
      Object {
        "payload": Object {
          "game": "0-05526803409810505",
          "pick": Object {
            "contents": "The forbidden fruit.",
            "id": 31,
          },
          "round": "0-05526803409810505",
          "unranked": Array [
            Object {
              "contents": "Dropping a chandelier on your enemies and riding the rope up.",
              "id": 268,
            },
            Object {
              "contents": "Keg stands.",
              "id": 188,
            },
            Object {
              "contents": "Skeletor.",
              "id": 175,
            },
            Object {
              "contents": "Sniffing glue.",
              "id": 117,
            },
          ],
        },
        "type": "candidates-ready-message",
      },
    ],
    "payload": Object {
      "game": "0-05526803409810505",
      "pick": 31,
      "round": "0-05526803409810505",
    },
    "pick": Object {
      "contents": "The forbidden fruit.",
      "id": 31,
    },
    "player": Object {
      "first_name": "Hermda",
      "games": Object {
        "0-05526803409810505": true,
      },
      "id": 567890,
      "platform": "facebook",
    },
    "round": Object {
      "candidates": Object {
        "123456": 268,
        "234567": 188,
        "345678": 175,
        "456789": 117,
      },
      "card": Object {
        "contents": "I can only express myself through _.",
        "id": 189,
      },
      "game": "0-05526803409810505",
      "id": "0-05526803409810505",
    },
  },
}
`;

exports[`third person picks a card 1`] = `
Object {
  "db": Object {
    "games": Object {
      "0-05526803409810505": Object {
        "id": "0-05526803409810505",
        "notified_players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "rounds": Object {
          "0": "0-05526803409810505",
        },
      },
    },
    "hands": Object {
      "0-05526803409810505": Object {
        "123456": Object {
          "cards": Object {
            "1015": true,
            "1039": true,
            "1040": true,
            "310": true,
            "444": true,
            "597": true,
            "640": true,
            "714": true,
            "748": true,
          },
          "game": "0-05526803409810505",
          "player": 123456,
        },
        "234567": Object {
          "cards": Object {
            "218": true,
            "370": true,
            "429": true,
            "485": true,
            "624": true,
            "629": true,
            "725": true,
            "779": true,
            "951": true,
          },
          "game": "0-05526803409810505",
          "player": 234567,
        },
        "345678": Object {
          "cards": Object {
            "252": true,
            "322": true,
            "458": true,
            "582": true,
            "590": true,
            "609": true,
            "900": true,
            "965": true,
            "999": true,
          },
          "game": "0-05526803409810505",
          "player": 345678,
        },
        "456789": Object {
          "cards": Object {
            "117": true,
            "241": true,
            "244": true,
            "334": true,
            "470": true,
            "498": true,
            "524": true,
            "593": true,
            "855": true,
            "898": true,
          },
          "game": "0-05526803409810505",
          "player": 456789,
        },
        "567890": Object {
          "cards": Object {
            "125": true,
            "227": true,
            "31": true,
            "32": true,
            "36": true,
            "530": true,
            "597": true,
            "604": true,
            "605": true,
            "729": true,
          },
          "game": "0-05526803409810505",
          "player": 567890,
        },
      },
    },
    "players": Object {
      "facebook": Object {
        "123456": Object {
          "first_name": "Ray",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 123456,
          "platform": "facebook",
        },
        "234567": Object {
          "first_name": "Hermon",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 234567,
          "platform": "facebook",
        },
        "345678": Object {
          "first_name": "Hermes",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 345678,
          "platform": "facebook",
        },
        "456789": Object {
          "first_name": "Hermshire",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 456789,
          "platform": "facebook",
        },
        "567890": Object {
          "first_name": "Hermda",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 567890,
          "platform": "facebook",
        },
      },
    },
    "queue": Object {},
    "rounds": Object {
      "0-05526803409810505": Object {
        "0-05526803409810505": Object {
          "candidates": Object {
            "123456": 268,
            "234567": 188,
            "345678": 175,
          },
          "card": Object {
            "contents": "I can only express myself through _.",
            "id": 189,
          },
          "game": "0-05526803409810505",
          "id": "0-05526803409810505",
        },
      },
    },
  },
  "results": Object {
    "action": "pick",
    "candidates": Object {
      "123456": Object {
        "contents": "Dropping a chandelier on your enemies and riding the rope up.",
        "id": 268,
      },
      "234567": Object {
        "contents": "Keg stands.",
        "id": 188,
      },
    },
    "game": Object {
      "id": "0-05526803409810505",
      "notified_players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "rounds": Object {
        "0": "0-05526803409810505",
      },
    },
    "hand": Object {
      "cards": Array [
        Object {
          "contents": "Skeletor.",
          "id": 175,
        },
        Object {
          "contents": "A gassy antelope.",
          "id": 252,
        },
        Object {
          "contents": "Penis envy.",
          "id": 322,
        },
        Object {
          "contents": "A big black dick.",
          "id": 458,
        },
        Object {
          "contents": "A squadron of moles wearing aviator goggles.",
          "id": 582,
        },
        Object {
          "contents": "Nunchuck moves.",
          "id": 590,
        },
        Object {
          "contents": "Grandpa's ashes.",
          "id": 609,
        },
        Object {
          "contents": "Tenderly kissing a unicorn's horn.",
          "id": 900,
        },
        Object {
          "contents": "Putting an entire peanut butter and jelly sandwich into the VCR.",
          "id": 965,
        },
        Object {
          "contents": "My manservant, Claude.",
          "id": 999,
        },
      ],
      "game": "0-05526803409810505",
      "player": 345678,
    },
    "lead": Object {
      "id": 345678,
      "platform": "facebook",
    },
    "messages": Array [
      Object {
        "payload": Object {
          "card": Object {
            "contents": "Skeletor.",
            "id": 175,
          },
        },
        "type": "card-selected-message",
      },
      Object {
        "type": "wait-for-votes-message",
      },
    ],
    "payload": Object {
      "game": "0-05526803409810505",
      "pick": 175,
      "round": "0-05526803409810505",
    },
    "pick": Object {
      "contents": "Skeletor.",
      "id": 175,
    },
    "player": Object {
      "first_name": "Hermes",
      "games": Object {
        "0-05526803409810505": true,
      },
      "id": 345678,
      "platform": "facebook",
    },
    "round": Object {
      "candidates": Object {
        "123456": 268,
        "234567": 188,
      },
      "card": Object {
        "contents": "I can only express myself through _.",
        "id": 189,
      },
      "game": "0-05526803409810505",
      "id": "0-05526803409810505",
    },
  },
}
`;

exports[`try to pick a card again 1`] = `
Object {
  "db": Object {
    "games": Object {
      "0-05526803409810505": Object {
        "id": "0-05526803409810505",
        "notified_players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "players": Object {
          "123456": true,
          "234567": true,
          "345678": true,
          "456789": true,
          "567890": true,
        },
        "rounds": Object {
          "0": "0-05526803409810505",
        },
      },
    },
    "hands": Object {
      "0-05526803409810505": Object {
        "123456": Object {
          "cards": Object {
            "1015": true,
            "1039": true,
            "1040": true,
            "310": true,
            "444": true,
            "597": true,
            "640": true,
            "714": true,
            "748": true,
          },
          "game": "0-05526803409810505",
          "player": 123456,
        },
        "234567": Object {
          "cards": Object {
            "188": true,
            "218": true,
            "370": true,
            "429": true,
            "485": true,
            "624": true,
            "629": true,
            "725": true,
            "779": true,
            "951": true,
          },
          "game": "0-05526803409810505",
          "player": 234567,
        },
        "345678": Object {
          "cards": Object {
            "175": true,
            "252": true,
            "322": true,
            "458": true,
            "582": true,
            "590": true,
            "609": true,
            "900": true,
            "965": true,
            "999": true,
          },
          "game": "0-05526803409810505",
          "player": 345678,
        },
        "456789": Object {
          "cards": Object {
            "117": true,
            "241": true,
            "244": true,
            "334": true,
            "470": true,
            "498": true,
            "524": true,
            "593": true,
            "855": true,
            "898": true,
          },
          "game": "0-05526803409810505",
          "player": 456789,
        },
        "567890": Object {
          "cards": Object {
            "125": true,
            "227": true,
            "31": true,
            "32": true,
            "36": true,
            "530": true,
            "597": true,
            "604": true,
            "605": true,
            "729": true,
          },
          "game": "0-05526803409810505",
          "player": 567890,
        },
      },
    },
    "players": Object {
      "facebook": Object {
        "123456": Object {
          "first_name": "Ray",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 123456,
          "platform": "facebook",
        },
        "234567": Object {
          "first_name": "Hermon",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 234567,
          "platform": "facebook",
        },
        "345678": Object {
          "first_name": "Hermes",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 345678,
          "platform": "facebook",
        },
        "456789": Object {
          "first_name": "Hermshire",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 456789,
          "platform": "facebook",
        },
        "567890": Object {
          "first_name": "Hermda",
          "games": Object {
            "0-05526803409810505": true,
          },
          "id": 567890,
          "platform": "facebook",
        },
      },
    },
    "queue": Object {},
    "rounds": Object {
      "0-05526803409810505": Object {
        "0-05526803409810505": Object {
          "candidates": Object {
            "123456": 268,
          },
          "card": Object {
            "contents": "I can only express myself through _.",
            "id": 189,
          },
          "game": "0-05526803409810505",
          "id": "0-05526803409810505",
        },
      },
    },
  },
  "results": Object {
    "action": "pick",
    "candidates": Object {
      "123456": Object {
        "contents": "Dropping a chandelier on your enemies and riding the rope up.",
        "id": 268,
      },
    },
    "game": Object {
      "id": "0-05526803409810505",
      "notified_players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "players": Object {
        "123456": true,
        "234567": true,
        "345678": true,
        "456789": true,
        "567890": true,
      },
      "rounds": Object {
        "0": "0-05526803409810505",
      },
    },
    "hand": Object {
      "cards": Array [
        Object {
          "contents": "Gloryholes.",
          "id": 310,
        },
        Object {
          "contents": "A robust mongoloid.",
          "id": 444,
        },
        Object {
          "contents": "Boris the Soviet Love Hammer.",
          "id": 597,
        },
        Object {
          "contents": "Owlbear's tears.",
          "id": 640,
        },
        Object {
          "contents": "Asians being racist against each other.",
          "id": 714,
        },
        Object {
          "contents": "Having sex in the P.E. equipment shed.",
          "id": 748,
        },
        Object {
          "contents": "Hand-me-down adult diapers",
          "id": 1015,
        },
        Object {
          "contents": "Vomiting in the shower",
          "id": 1039,
        },
        Object {
          "contents": "An intellectually superior overlord",
          "id": 1040,
        },
      ],
      "game": "0-05526803409810505",
      "player": 123456,
    },
    "lead": Object {
      "id": 123456,
      "platform": "facebook",
    },
    "messages": Array [
      Object {
        "type": "card-not-in-hand",
      },
    ],
    "payload": Object {
      "game": "0-05526803409810505",
      "pick": 268,
      "round": "0-05526803409810505",
    },
    "pick": Object {
      "contents": "Dropping a chandelier on your enemies and riding the rope up.",
      "id": 268,
    },
    "player": Object {
      "first_name": "Ray",
      "games": Object {
        "0-05526803409810505": true,
      },
      "id": 123456,
      "platform": "facebook",
    },
    "round": Object {
      "candidates": Object {
        "123456": 268,
      },
      "card": Object {
        "contents": "I can only express myself through _.",
        "id": 189,
      },
      "game": "0-05526803409810505",
      "id": "0-05526803409810505",
    },
  },
}
`;
